# rcars

./: README.txt
rcars_detector/: CMakeLists.txt  package.xml
rcars_detector/src/: rcars_detector_node.cpp
rcars_estimator/: CMakeLists.txt  package.xml  parametersRCARS.info
rcars_estimator/config/: EKFsettings.info  debug.rviz  parametersRCARS.info  parametersRCARS.yaml
rcars_estimator/config/workspaces/: example.yaml
rcars_estimator/include/: FilterInterface_RCARS.hpp  FilterRCARS.hpp  FilterStates.hpp  ImuPrediction.hpp  ParameterLoader.hpp  TagUpdate.hpp  config.hpp
rcars_estimator/launch/: vi-sensor_left.launch  vi-sensor_left_bag.launch  vi-sensor_left_detector_only.launch  vi-sensor_left_record.launch
rcars_estimator/lightweightukf/: CMakeLists.txt
rcars_estimator/lightweightukf/examples/leggedStateEstimator/: CMakeLists.txt  FilterVel.cpp  FilterVel.hpp  LeggedStateEstimatorManager.cpp  LeggedStateEstimatorManager.hpp  main.cpp
rcars_estimator/lightweightukf/include/: EKF.hpp  State.hpp
rcars_estimator/lightweightukf/src/: testState.cpp
rcars_estimator/src/: FilterInterface_RCARS.cpp  rcars_estimator_node.cpp  rcars_test.cpp
rcars_estimator/srv/: FilterStatus.srv
rcars_visualization/: CMakeLists.txt  package.xml
rcars_visualization/launch/: visualization.launch
rcars_visualization/src/: rcars_image_visualization_node.cpp  rcars_loop_closure_evaluation_node.cpp  rcars_path_visualization_node.cpp  rcars_tf_publisher_node.cpp
